--- a/geonetwork/catalog/locales/en-custom.json
+++ b/geonetwork/catalog/locales/en-custom.json
@@ -42,5 +42,7 @@
 	"limitationsPublicAccess": "Access restrictions",
 	"useConstraints": "Use constraints",
 	"accessConstraints": "Limitations on Public Access and Use",
-	"attributionStatement": "Attribution statement"
+	"attributionStatement": "Attribution statement",
+	"ui-showMosaic": "Show planned outage message on Home page",
+	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>Time, Date</strong> to <strong>Time, Date</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>"
 }
