fix indexing and display of constraints

--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -29,7 +29,8 @@
 	"recordNotFound": "The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a> or for NRW staff please ensure you are <a href=\"catalog.signin?redirect={{url}}\">signed in</a>.",
 	"facet-formatSpecification": "Format specification",
 	"facet-hasOnlineResource": "Available to download",
-	"facet-license": "License",
+	"facet-licence": "Licence",
+	"licence": "Licence",
 	"parentRecord": "Parent record",
 	"fileIdentifier": "File identifier",
 	"uuid": "Resource identifier",
