add missing welsh translations

--- a/nrw/geonetwork/catalog/locales/cy-v4.json
+++ b/nrw/geonetwork/catalog/locales/cy-v4.json
@@ -101,19 +101,19 @@
   "resourceTemporalDateRange": "Resource temporal coverage",
   "facet-dateStamp": "Record update",
   "facet-format": "Formats",
-  "facet-topic": "Topics",
-  "facet-inspireThemeUri": "INSPIRE themes",
-  "facet-cl_hierarchyLevel": "Type of resources",
-  "facet-resourceType": "Type of resources",
-  "facet-cl_resourceScope": "Type of resources",
+  "facet-topic": "Pynciau",
+  "facet-inspireThemeUri": "Themâu INSPIRE",
+  "facet-cl_hierarchyLevel": "Math o adnoddau",
+  "facet-resourceType": "Math o adnoddau",
+  "facet-cl_resourceScope": "Math o adnoddau",
   "facet-cl_spatialRepresentationType": "Spatial representation type",
   "facet-availableInServices": "Available in",
   "availableInServices-availableInDownloadService": "Download service",
   "availableInServices-availableInViewService": "View service",
   "facet-th_gemet_tree": "Environmental tags",
   "facet-th_regions_tree": "Regions",
-  "facet-th_httpinspireeceuropaeutheme-theme": "INSPIRE themes",
-  "facet-th_httpinspireeceuropaeutheme-theme_tree": "INSPIRE themes",
+  "facet-th_httpinspireeceuropaeutheme-theme": "Themâu INSPIRE",
+  "facet-th_httpinspireeceuropaeutheme-theme_tree": "Themâu INSPIRE",
   "facet-creationYearForResource":  "Years",
   "facet-resolutionScaleDenominator": "Scales",
   "facet-cl_maintenanceAndUpdateFrequency": "Update frequencies",
@@ -121,7 +121,7 @@
   "facet-tag": "Keywords",
   "facet-resourceTemporalDateRange": "Temporal extent",
   "facet-serviceType": "Service type",
-  "facet-cl_topic": "Topic",
+  "facet-cl_topic": "Pwnc",
   "facet-valid": "Validation status",
   "valid-1": "Valid",
   "valid-0": "Invalid",
@@ -256,7 +256,7 @@
   "summary": "Summary",
   "metadataRecords": "Metadata records",
   "accessAndUseConstraints": "Access and use constraints",
-  "results": "Results",
+  "results": "Canlyniadau",
   "format-zip": "ZIP",
   "facet-geometry": "Spatial filter",
   "usingCswFromNode": "Using portal CSW: ",
