--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -24,6 +24,7 @@
 	"gmd:LI_Lineage": "Data Quality Reports (Lineage)",
 	"searchAlineage": "Search for a lineage report ...",
 	"wel": "Cymraeg",
+	"cym": "Cymraeg",
 	"zarooResult": "No results found. If you are searching by the metadata URI please include the wildcard * in your search e.g. *98736. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
 	"anyFieldTitle": "For precise search results please use “ “ for exact matches. e.g. “Areas of Outstanding Natural Beauty”. To search using the metadata URI, please include the wildcard * in your search e.g. *98736",
 	"recordNotFound": "The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a> or for NRW staff please ensure you are <a href=\"catalog.signin?redirect={{url}}\">signed in</a>.",
@@ -43,6 +44,10 @@
 	"useConstraints": "Use constraints",
 	"accessConstraints": "Limitations on Public Access and Use",
 	"attributionStatement": "Attribution statement",
+	"restrictionType": "Restriction type",
+	"otherRestrictions": "Other restrictions",
+	"restricted": "Restricted",
+	"useConstraintsType": "Use constraints type",
 	"ui-showMosaic": "Show planned outage message on Home page",
 	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>Time, Date</strong> to <strong>Time, Date</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>"
 }
