change error message for creating records with duplicate UUIDs

--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -49,6 +49,7 @@
 	"restricted": "Restricted",
 	"useConstraintsType": "Use constraints type",
 	"ui-showMosaic": "Show planned outage message on Home page",
-	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>Time, Date</strong> to <strong>Time, Date</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
-	"contactUs": "Contact Us"
+	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>28/03/2024 (15:00)</strong> to <strong>28/03/2024 (16:00)</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
+	"contactUs": "Contact Us",
+	"createMetadataError-duplicateUUID": "There is already an existing record with the same resource identifier."
 }
