include subject line in hyperlinks

--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -11,7 +11,7 @@
 	"ui-mod-directory": "Directory",
 	"facet-OwnerForResource":"Responsible Organisation (Owner)",
 	"searchOver":"Welcome to the Natural Resources Wales Discovery Metadata Catalogue, where you can search for information on <strong>{{records}}</strong> datasets that are held by Natural Resources Wales. Read more about metadata and how to use this site in the <a href='https://nrw-metadata-portal.readthedocs.io/en/stable' target='_blank'>online documentation</a>. For more information on how you can access our datasets please visit <a href='https://naturalresources.wales/evidence-and-data/accessing-our-data/?lang=en' target='_blank'>Accessing our Data</a>.",
-	"searchOver-loggedIn": "Welcome to the Natural Resources Wales Discovery Metadata Catalogue, where you can search for information on <strong>{{records}}</strong> datasets that are held by Natural Resources Wales. Read more about metadata and how to use this site in the <a href='https://nrw-metadata-portal.readthedocs.io/en/stable' target='_blank'>online documentation</a>.<br/><br/>If you have created or acquired a dataset that requires metadata or would like to add information to our current metadata then please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
+	"searchOver-loggedIn": "Welcome to the Natural Resources Wales Discovery Metadata Catalogue, where you can search for information on <strong>{{records}}</strong> datasets that are held by Natural Resources Wales. Read more about metadata and how to use this site in the <a href='https://nrw-metadata-portal.readthedocs.io/en/stable' target='_blank'>online documentation</a>.<br/><br/>If you have created or acquired a dataset that requires metadata or would like to add information to our current metadata then please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
 	"gmd:DQ_CompletenessOmission": "Data Quality Reports (Omission)",
 	"gmd:DQ_ThematicAccuracy": "Data Quality Reports (Thematic Accuracy)",
 	"gmd:DQ_TemporalAccuracy": "Data Quality Reports (Temporal Accuracy)",
@@ -25,9 +25,9 @@
 	"searchAlineage": "Search for a lineage report ...",
 	"wel": "Cymraeg",
 	"cym": "Cymraeg",
-	"zarooResult": "No results found. If you are searching by the metadata URI please include the wildcard * in your search e.g. *98736. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
+	"zarooResult": "No results found. If you are searching by the metadata URI please include the wildcard * in your search e.g. *98736. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
 	"anyFieldTitle": "For precise search results please use “ “ for exact matches. e.g. “Areas of Outstanding Natural Beauty”. To search using the metadata URI, please include the wildcard * in your search e.g. *98736",
-	"recordNotFound": "The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a> or for NRW staff please ensure you are <a href='catalog.signin?redirect={{url}}'>signed in</a>.",
+	"recordNotFound": "The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a> or for NRW staff please ensure you are <a href='catalog.signin?redirect={{url}}'>signed in</a>.",
 	"facet-formatSpecification": "Format specification",
 	"facet-hasOnlineResource": "Available to download",
 	"facet-licence": "Licence",
@@ -49,7 +49,7 @@
 	"restricted": "Restricted",
 	"useConstraintsType": "Use constraints type",
 	"ui-showMosaic": "Show planned outage message on Home page",
-	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>28/03/2024 (15:00)</strong> to <strong>28/03/2024 (16:00)</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
+	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>28/03/2024 (15:00)</strong> to <strong>28/03/2024 (16:00)</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
 	"contactUs": "Contact Us",
 	"createMetadataError-duplicateUUID": "There is already an existing record with the same resource identifier."
 }
