add missing translations. Fixes SUPPORT-20104/NRW bug ref 169184

--- a/nrw/geonetwork/catalog/locales/cy-v4.json
+++ b/nrw/geonetwork/catalog/locales/cy-v4.json
@@ -81,7 +81,7 @@
   "sortBy-validDesc": "validation status",
   "sortBy-recordOwner": "owner",
   "csw-sortByHelp": "Define sort option for GetRecords query. This can solve issue for large sets where some records may change on the remote node during harvesting and returned in different pages. Sorting by 'identifier:A' means by UUID with alphabetical order. Any CSW queryables can be used in combination with A or D for setting the ordering.",
-  "moreLikeThis": "Similar records",
+  "moreLikeThis": "Setiau Data tebyg",
   "moreLikeType": "Similar ",
   "readMore": "See more...",
   "onTheWeb": "More online information",
@@ -174,10 +174,10 @@
   "resourceVerticalRange": "Vertical extent",
   "searchBadRequest": "Query returned an error. Check the console for details.",
   "searchInvalidResponse": "Query returned an invalid response. Check the console for details.",
-  "exactMatch": "Exact match",
+  "exactMatch": "Cydweddiad union",
   "exactMatch-help": "Exact match means that '\"' are added to the search terms.",
-  "titleOnly": "Search in title only",
-  "titleOnly-help": "Search in title only.",
+  "titleOnly": "Chwilio yn y teitl yn unig",
+  "titleOnly-help": "Chwilio yn y teitl yn unig.",
   "gnbbox": "Geographical area",
   "featuresInMapExtent": "Features in current map extent only",
   "heatmapAvailableForPointOnly": "Heatmap only supported for point layer.",
@@ -350,8 +350,8 @@
   "keywordAnchorLink": "More information about ",
   "facet-linkUrl": "Url",
   "facet-linkProtocol": "Protocol",
-  "copyToClipboard": "Copy to clipboard.",
-  "copyUrlToClipboard": "Copy URL to clipboard.",
+  "copyToClipboard": "Copïo i'r clipfwrdd.",
+  "copyUrlToClipboard": "Copïo URL i'r clipfwrdd.",
   "copyHarvesterConfig": "Copy harvester config",
   "copyListOfUuids": "Copy list of UUIDs",
   "addHarvesterFromClipboard": "Paste harvester config",
