remove More information hyperlinks from keywords on the Default view. Fixes SUPPORT-20344/NRW bug ref 169826

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -52,5 +52,6 @@
 	"false": "anghywir",
 	"featureCatalog": "Catalog nodwedd",
 	"List": "Rhestr",
-	"Table": "Tabl"
+	"Table": "Tabl",
+	"facet-tag.\\*": "Allweddair"
 }
