add iframe to create metadata screen. Fixes SUPPORT-20088/NRW bug ref 169135

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -53,5 +53,7 @@
 	"featureCatalog": "Catalog nodwedd",
 	"List": "Rhestr",
 	"Table": "Tabl",
-	"facet-tag.\\*": "Allweddair"
+	"facet-tag.\\*": "Allweddair",
+	"nextAvailableIdentifier": "Next available identifier:",
+	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below."
 }
