change the order in the default view and xpath of the access and use constraints. Fixes SUPPORT-20174/NRW bug ref 169484

--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -40,13 +40,14 @@
 	"NRW_internalContact": "NRW Internal contact",
 	"NRW_internalLocation": "NRW Internal location",
 	"supplementalInformation": "Additional information",
-	"limitationsPublicAccess": "Access restrictions",
+	"limitationsPublicAccess": "Limitations on Public Access and Use",
 	"useConstraints": "Use constraints",
-	"accessConstraints": "Limitations on Public Access and Use",
+	"accessConstraints": "Access restrictions",
 	"attributionStatement": "Attribution statement",
 	"restrictionType": "Restriction type",
 	"otherRestrictions": "Other restrictions",
 	"restricted": "Restricted",
+	"noLimitations": "No limitations to public access",
 	"useConstraintsType": "Use constraints type",
 	"ui-showMosaic": "Show planned outage message on Home page",
 	"plannedOutage": "Please be aware that Data Discovery will be unavailable from <strong>28/03/2024 (15:00)</strong> to <strong>28/03/2024 (16:00)</strong>. Apologies for any inconvenience, if you have any queries, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
