add button to skip past the filter facets and changed the class for the main skip to content button to match. Fixes accessibility issue in SUPPORT-20230/NRW bug ref 169616

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -55,5 +55,6 @@
 	"Table": "Tabl",
 	"facet-tag.\\*": "Allweddair",
 	"nextAvailableIdentifier": "Next available identifier:",
-	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below."
+	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below.",
+	"skipToResults": "Skip to search results"
 }
