change text for sign-in button. Fixes SUPPORT-20397/NRW bug ref 169960

--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -56,6 +56,6 @@
 	"facet-tag.\\*": "Keyword",
 	"nextAvailableIdentifier": "Next available identifier:",
 	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below.",
-	"signIn": "NRW Staff Sign in",
+	"signIn": "NRW Sign in",
 	"skipToResults": "Skip to search results"
 }
