update cookie button message. Fixes SUPPORT-20405/NRW bug ref 170001

--- a/nrw/geonetwork/catalog/locales/cy-core.json
+++ b/nrw/geonetwork/catalog/locales/cy-core.json
@@ -59,7 +59,7 @@
     "cookieWarning": "Mae'r wedudalen hon yn defnyddio cwcis. Os byddwch yn parhau i ddefnyddio'r dudalen hon, byddwn yn cymryd yn ganiataol eich bod yn derbyn hyn.",
     "moreOnCookie": "Eisiau gwybod mwy am y neges hon?",
     "acceptCookie": "Derbyn",
-    "rejectCookie": "Dewch â mi oddi yma",
+    "rejectCookie": "Ewch â mi oddi yma",
     "adminConsole": "Consol gweinyddol",
     "loadCapabilitiesLayers": "Llwytho haenau gwasanaeth",
     "any": "Testun llawn",
