add outstanding translations. Fixes SUPPORT-20104/NRW bug ref 169184

--- a/nrw/geonetwork/catalog/locales/cy-v4.json
+++ b/nrw/geonetwork/catalog/locales/cy-v4.json
@@ -68,7 +68,7 @@
   "anyFieldTitle": "Search. Type in to get suggestions. Use \" to search for phrases and exact match eg. \"reference grid\". Use q() for advanced querying eg. q(-cl_status_text:obsolete)",
   "accessManager": "Access rights",
   "facetIncludeFilter": "Filter values. Regular expression can be used using '/Land.*/'",
-  "allValuesExcept": "All values except",
+  "allValuesExcept": "Holl werthoedd heblaw",
   "filterWithValue": "Filter with this value",
   "indexNotAvailable": "No search service available currently!",
   "facet-cat": "Category",
@@ -89,7 +89,7 @@
   "loadMoreResults": "load more results...",
   "rating": "rating",
   "popularity": "popularity",
-  "alternateTitle": "Also named: ",
+  "alternateTitle": "Enwir hefyd: ",
   "isHarvested-true": "Harvested",
   "isHarvested-false": "Local",
   "deleteRecordConfirm": "Do you really want to remove '{{resourceTitle}}'?",
@@ -175,7 +175,7 @@
   "searchBadRequest": "Query returned an error. Check the console for details.",
   "searchInvalidResponse": "Query returned an invalid response. Check the console for details.",
   "exactMatch": "Cydweddiad union",
-  "exactMatch-help": "Exact match means that '\"' are added to the search terms.",
+  "exactMatch-help": "Cydweddiad union yw pan rhoddir \" \" o amgylch yr hyn a chwilir.",
   "titleOnly": "Chwilio yn y teitl yn unig",
   "titleOnly-help": "Chwilio yn y teitl yn unig.",
   "gnbbox": "Geographical area",
