add outstanding translations. Fixes SUPPORT-20104/NRW bug ref 169184

--- a/nrw/geonetwork/catalog/locales/cy-v4.json
+++ b/nrw/geonetwork/catalog/locales/cy-v4.json
@@ -69,7 +69,7 @@
   "accessManager": "Access rights",
   "facetIncludeFilter": "Filter values. Regular expression can be used using '/Land.*/'",
   "allValuesExcept": "Holl werthoedd heblaw",
-  "filterWithValue": "Filter with this value",
+  "filterWithValue": "Hidlo gyda'r gwerth hwn",
   "indexNotAvailable": "No search service available currently!",
   "facet-cat": "Category",
   "cat": "Category",
