change the heading for similar datasets to be constant regardless of record type and add the correct translations for it. Fixes SUPPORT-20104/NRW bug ref 169184

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -56,5 +56,7 @@
 	"facet-tag.\\*": "Allweddair",
 	"nextAvailableIdentifier": "Next available identifier:",
 	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below.",
-	"skipToResults": "Skip to search results"
+	"skipToResults": "Skip to search results",
+	"similarDataset": "Set ddata debyg",
+	"similarDatasets": "Setiau ddata tebyg"
 }
