--- a/nrw/geonetwork/catalog/locales/en-custom.json
+++ b/nrw/geonetwork/catalog/locales/en-custom.json
@@ -57,5 +57,7 @@
 	"nextAvailableIdentifier": "Next available identifier:",
 	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below.",
 	"signIn": "NRW Sign in",
-	"skipToResults": "Skip to search results"
+	"skipToResults": "Skip to search results",
+	"similarDataset": "Similar dataset",
+	"similarDatasets": "Similar datasets"
 }
