--- a/nrw/geonetwork/catalog/locales/cy-v4.json
+++ b/nrw/geonetwork/catalog/locales/cy-v4.json
@@ -81,7 +81,7 @@
   "sortBy-validDesc": "validation status",
   "sortBy-recordOwner": "owner",
   "csw-sortByHelp": "Define sort option for GetRecords query. This can solve issue for large sets where some records may change on the remote node during harvesting and returned in different pages. Sorting by 'identifier:A' means by UUID with alphabetical order. Any CSW queryables can be used in combination with A or D for setting the ordering.",
-  "moreLikeThis": "Setiau Data tebyg",
+  "moreLikeThis": "Setiau data tebyg",
   "moreLikeType": "Similar ",
   "readMore": "See more...",
   "onTheWeb": "More online information",
