add custom button to switch between English and Welsh portals to replace the current static page set-up. Fixes accessibility issue in SUPPORT-20205/NRW bug ref 169596

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -58,5 +58,9 @@
 	"nextAvailableIdentifierGuidance": "Copy the identifier above into the correct identifier template below.",
 	"skipToResults": "Skip to search results",
 	"similarDataset": "Set ddata debyg",
-	"similarDatasets": "Setiau ddata tebyg"
+	"similarDatasets": "Setiau ddata tebyg",
+	"targetLang": "en",
+	"switchToPortal": "English",
+	"switchToPortalTitle": "Switch to English",
+	"portalURL": "../../srv/eng/catalog.search#/home"
 }
