add outstanding Welsh translations. Fixes SUPPORT-20358/NRW bug ref unknown

--- a/nrw/geonetwork/catalog/locales/cy-v4.json
+++ b/nrw/geonetwork/catalog/locales/cy-v4.json
@@ -144,10 +144,10 @@
   "facet-isHarvested": "Harvested",
   "facet-isTemplate": "Record types",
   "facet-schema": "Standards",
-  "facet-isPublishedToAll": "Access",
+  "facet-isPublishedToAll": "Mynediad",
   "facet-th_httpinspireeceuropaeumetadatacodelistPriorityDataset-PriorityDataset_tree": "INSPIRE Priority data set",
-  "isPublishedToAll-true": "Public records",
-  "isPublishedToAll-false": "Restricted records",
+  "isPublishedToAll-true": "Cofnodion cyhoeddus",
+  "isPublishedToAll-false": "Cofnodion cyfyngedig",
   "dateTypeForStatus": "Date type",
   "dateValueForStatus": "Date",
   "indexRecordsWithErrors": "Index records with errors",
