--- a/nrw/geonetwork/catalog/locales/en-v4.json
+++ b/nrw/geonetwork/catalog/locales/en-v4.json
@@ -51,10 +51,15 @@
   "remoteRecord": "Record from external catalog",
   "chooseACatalogRecord": "Choose a catalog record",
   "siblingListToAdd": "List of record links to add",
-  "orUseRemoteRecordUrl": "or link to a remote record",
+  "orUseRemoteRecordUrl": "Link to a remote record",
   "remoteRecordUrl-help": "Remote record can be linked to record in this catalog by pointing to an URL of the remote record. If the remote record is in a GeoNetwork catalog, the landing page of the record is recommended (eg. https://catalog/geonetwork/srv/api/records/{uuid}). For GeoNode, the HTML page can work. For others, XML document can be used (eg. API call or CSW GetRecordById request).",
   "remoteRecordPropertiesError": "Failed to extract title and UUID for remote record. Check the target document.",
   "remoteRecordUrlReturnedError": "Failed to access URL: ",
+  "ui-hotkeys": "Keyword shortcuts",
+  "ui-rssFeeds": "List of RSS feeds",
+  "ui-showSearch": "Display search box",
+  "ui-info": "List of information tabs",
+  "ui-info-help": "Can be of type <i>featuredUserSearches</i>, <i>Comments</i> or <i>search</i>. If search, define title and parameters <pre>{\n    \"type\": \"search\",\n    \"title\": \"lastRecords\",\n    \"active\": true,\n    \"params\": {\n      \"isTemplate\": \"n\",\n      \"sortBy\": \"createDate\",\n      \"sortOrder\": \"desc\",\n      \"from\": 1,\n      \"to\": 12\n    }\n  }</pre>. And define which one is the active panel on page load.",
   "ui-defaultTool": "Default active tool",
   "ui-defaultToolAfterMapLoad": "Active tool after map load",
   "ui-defaultToolAfterMapLoad-help": "User can open a map from different location (eg. home page maps, record view, map selector panel, URL). Define which tool panel to open by default after map is loaded. Can be empty to not activate any tool. 'layers' or 'legend' allows to easily view the list of layers in the map.",
@@ -68,8 +73,8 @@
   "anyFieldTitle": "Search. Type in to get suggestions. Use \" to search for phrases and exact match eg. \"reference grid\". Use q() for advanced querying eg. q(-cl_status_text:obsolete)",
   "accessManager": "Access rights",
   "facetIncludeFilter": "Filter values. Regular expression can be used using '/Land.*/'",
-  "allValuesExcept": "Holl werthoedd heblaw",
-  "filterWithValue": "Hidlo gyda'r gwerth hwn",
+  "allValuesExcept": "All values except",
+  "filterWithValue": "Filter with this value",
   "indexNotAvailable": "No search service available currently!",
   "facet-cat": "Category",
   "cat": "Category",
@@ -81,15 +86,15 @@
   "sortBy-validDesc": "validation status",
   "sortBy-recordOwner": "owner",
   "csw-sortByHelp": "Define sort option for GetRecords query. This can solve issue for large sets where some records may change on the remote node during harvesting and returned in different pages. Sorting by 'identifier:A' means by UUID with alphabetical order. Any CSW queryables can be used in combination with A or D for setting the ordering.",
-  "moreLikeThis": "Setiau data tebyg",
+  "moreLikeThis": "Similar records",
   "moreLikeType": "Similar ",
   "readMore": "See more...",
-  "onTheWeb": "Mwy o wybodaeth",
+  "onTheWeb": "More information",
   "pdfReportTocTitle": "Contents",
   "loadMoreResults": "load more results...",
   "rating": "rating",
   "popularity": "popularity",
-  "alternateTitle": "Enwir hefyd: ",
+  "alternateTitle": "Also named: ",
   "isHarvested-true": "Harvested",
   "isHarvested-false": "Local",
   "deleteRecordConfirm": "Do you really want to remove '{{resourceTitle}}'?",
@@ -101,19 +106,19 @@
   "resourceTemporalDateRange": "Resource temporal coverage",
   "facet-dateStamp": "Record update",
   "facet-format": "Formats",
-  "facet-topic": "Pynciau",
-  "facet-inspireThemeUri": "Themâu INSPIRE",
-  "facet-cl_hierarchyLevel": "Math o adnoddau",
-  "facet-resourceType": "Math o adnoddau",
-  "facet-cl_resourceScope": "Math o adnoddau",
+  "facet-topic": "Topics",
+  "facet-inspireThemeUri": "INSPIRE themes",
+  "facet-cl_hierarchyLevel": "Type of resources",
+  "facet-resourceType": "Type of resources",
+  "facet-cl_resourceScope": "Type of resources",
   "facet-cl_spatialRepresentationType": "Spatial representation type",
   "facet-availableInServices": "Available in",
   "availableInServices-availableInDownloadService": "Download service",
   "availableInServices-availableInViewService": "View service",
   "facet-th_gemet_tree": "Environmental tags",
   "facet-th_regions_tree": "Regions",
-  "facet-th_httpinspireeceuropaeutheme-theme": "Themâu INSPIRE",
-  "facet-th_httpinspireeceuropaeutheme-theme_tree": "Themâu INSPIRE",
+  "facet-th_httpinspireeceuropaeutheme-theme": "INSPIRE themes",
+  "facet-th_httpinspireeceuropaeutheme-theme_tree": "INSPIRE themes",
   "facet-creationYearForResource":  "Years",
   "facet-resolutionScaleDenominator": "Scales",
   "facet-cl_maintenanceAndUpdateFrequency": "Update frequencies",
@@ -121,7 +126,7 @@
   "facet-tag": "Keywords",
   "facet-resourceTemporalDateRange": "Temporal extent",
   "facet-serviceType": "Service type",
-  "facet-cl_topic": "Pwnc",
+  "facet-cl_topic": "Topic",
   "facet-valid": "Validation status",
   "valid-1": "Valid",
   "valid-0": "Invalid",
@@ -144,13 +149,13 @@
   "facet-isHarvested": "Harvested",
   "facet-isTemplate": "Record types",
   "facet-schema": "Standards",
-  "facet-isPublishedToAll": "Mynediad",
+  "facet-isPublishedToAll": "Access",
   "facet-th_httpinspireeceuropaeumetadatacodelistPriorityDataset-PriorityDataset_tree": "INSPIRE Priority data set",
-  "isPublishedToAll-true": "Cofnodion cyhoeddus",
-  "isPublishedToAll-false": "Cofnodion cyfyngedig",
+  "isPublishedToAll-true": "Public records",
+  "isPublishedToAll-false": "Restricted records",
   "dateTypeForStatus": "Date type",
   "dateValueForStatus": "Date",
-  "indexRecordsWithErrors": "Index records with errors",
+  "indexRecordsWithErrors": "Index records with errors / warnings",
   "top10IndexingErrors": "Top 10 indexing errors:",
   "facet-indexingErrorMsg": "Indexing errors",
   "facet-indexingWarningMsg": "Indexing warnings",
@@ -174,10 +179,10 @@
   "resourceVerticalRange": "Vertical extent",
   "searchBadRequest": "Query returned an error. Check the console for details.",
   "searchInvalidResponse": "Query returned an invalid response. Check the console for details.",
-  "exactMatch": "Cydweddiad union",
-  "exactMatch-help": "Cydweddiad union yw pan rhoddir \" \" o amgylch yr hyn a chwilir.",
-  "titleOnly": "Chwilio yn y teitl yn unig",
-  "titleOnly-help": "Chwilio yn y teitl yn unig.",
+  "exactMatch": "Exact match",
+  "exactMatch-help": "Exact match means that '\"' are added to the search terms.",
+  "titleOnly": "Search in title only",
+  "titleOnly-help": "Search in title only.",
   "gnbbox": "Geographical area",
   "featuresInMapExtent": "Features in current map extent only",
   "heatmapAvailableForPointOnly": "Heatmap only supported for point layer.",
@@ -237,6 +242,8 @@
   "wpsOutputAsReference-help": "Request response as a URL (which will be available for download on success).",
   "wpsLoadReferenceInMap": "Load reference in map",
   "wpsLoadReferenceInMap-help": "Try to download the reference URL with the response and load it on the map (needs to be GeoJSON response).",
+  "ui-wpsSource": "Processing service",
+  "ui-wpsSource-help": "An ordered array of 'list' (see list of service for WPS type), 'url' (user can put a URL) or 'recent' (recent WPS service used are stored in browser local storage).",
   "translationPackClearCache": "Clear translation packs cache",
   "translationPackClearCache-help": "Required if you change JSON translation files of the Javascript application in catalog/locale, database translations or schema JSON translations.",
   "translationPackCacheCleared": "Translation packs cache cleared.",
@@ -256,7 +263,7 @@
   "summary": "Summary",
   "metadataRecords": "Metadata records",
   "accessAndUseConstraints": "Access and use constraints",
-  "results": "Canlyniadau",
+  "results": "Results",
   "format-zip": "ZIP",
   "facet-geometry": "Spatial filter",
   "usingCswFromNode": "Using portal CSW: ",
@@ -274,6 +281,7 @@
   "ui/chooseAnOption-help": "Current user configuration is empty. Choose one or more option above or create a full configuration.",
   "uiConfigForm": "Configuration form",
   "uiConfigJsonForm": "JSON form",
+  "uiConfigPreview": "Preview app",
   "uiCurrentConfig": "Current configuration",
   "uiBasicConfig": "Full configuration",
   "uiRemoveDefaultOptions": "Remove default options",
@@ -350,8 +358,8 @@
   "keywordAnchorLink": "More information about ",
   "facet-linkUrl": "Url",
   "facet-linkProtocol": "Protocol",
-  "copyToClipboard": "Copïo i'r clipfwrdd.",
-  "copyUrlToClipboard": "Copïo URL i'r clipfwrdd.",
+  "copyToClipboard": "Copy to clipboard.",
+  "copyUrlToClipboard": "Copy URL to clipboard.",
   "copyHarvesterConfig": "Copy harvester config",
   "copyListOfUuids": "Copy list of UUIDs",
   "addHarvesterFromClipboard": "Paste harvester config",
@@ -412,6 +420,7 @@
   "application/vnd.geo+json": "GeoJSON",
   "application/json": "JSON",
   "shape-zip": "ESRI Shapefile",
+  "scaleLineTool": "Map scale",
   "text/xml; subtype=gml/2.1.2": "GML 2.1.2",
   "text/xml; subtype=gml/3.1.1": "GML 3.1.1",
   "text/xml; subtype=gml/3.2": "GML 3.2",
@@ -422,5 +431,23 @@
   "overviewDescription": "Overview description",
   "overviewUrl": "Overview URL",
   "restApiUrl": "REST API URL",
-  "filterHelp": "Please click on one of the buttons below to activate the filter"
+  "filterHelp": "Please click on one of the buttons below to activate the filter",
+  "selectDOIResource": "Choose a DOI resource",
+  "httpStatus--200": "Invalid status",
+  "httpStatus-200": "200: Valid status",
+  "httpStatus-404": "404: Not found",
+  "httpStatus-401": "401: Not authorized",
+  "httpStatus-500": "500: Error",
+  "linkStatus-ok": "Valid",
+  "linkStatus-ko": "Invalid",
+  "linkStatus-unknown": "Unknown",
+  "chooseMetadataGroupOwner": "Metadata group owner",
+  "chooseArequestStatus": "Request status",
+  "chooseAlinkStatus": "Link status",
+  "linkChecker-search": "Search",
+  "linkChecker-excludeHarvestedMetadata": "Exclude harvested metadata",
+  "linkStatus": "Link status",
+  "requestStatus": "Request status",
+  "linkUrl": "Link url",
+  "associatedUuid": "Associated to metadata UUID"
 }
