Fixed translation for workflow status filter facet

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -26,6 +26,7 @@
 	"facet-formatSpecification": "Manyleb fformat",
 	"facet-hasOnlineResource": "Ar gael i'w lawrlwytho",
 	"facet-licence": "Math o Drwydded",
+	"facet-statusWorkflow": "Statws llif gwaith",
 	"licence": "Math o Drwydded",
 	"parentRecord": "Prif gofnod",
 	"fileIdentifier": "Dynodydd ffeil",
