--- a/nrw/geonetwork/catalog/locales/cy-search.json
+++ b/nrw/geonetwork/catalog/locales/cy-search.json
@@ -187,7 +187,7 @@
     "addAllLayersToMap": "Ychwanegwch yr holl haenau {{number}} at y map",
     "downloadsAndResources": "Lawrlwytho a dolenni",
     "sourceCatalog": "Darparwyd gan",
-    "tempExtent": "Maint tymhorol",
+    "tempExtent": "Ystod amser",
     "more": "mwy",
     "less": "llai",
     "overview": "Trosolwg",
@@ -214,14 +214,14 @@
     "lineage": "Llinach",
     "identification": "Dull adnabod",
     "metadata": "Metadata",
-    "mdLanguage": "Iaith metadata",
+    "mdLanguage": "laith Metadata",
     "mdContact": "Cyswllt metadata",
     "parentIdentifier": "Dynodwr metadata rhiant",
     "distributor": "Dosbarthwr",
     "sourceDataset": "Set ddata ffynhonnell",
     "metadataInXML": "Lawrlwytho metadata",
-    "language": "Iaith",
-    "metadataLanguage": "Iaith metadata",
+    "language": "laith",
+    "metadataLanguage": "laith Metadata",
     "sendMail": "Anfon E-bost",
     "newOwner": "Perchennog Newydd",
     "updateCategories": "Diweddaru categorïau",
