update translations. Fixes SUPPORT-20174/NRW bug ref 169484

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -39,7 +39,7 @@
 	"supplementalInformation": "Gwybodaeth Ychwanegol",
 	"accessConstraints": "Cyfyngiadau Mynediad",
 	"useConstraints": "Cyfyngiadau ar Ddefnyddio",
-	"limitationsPublicAccess": "Cyfyngiadau ar Fynediad a Defnydd Cyhoeddus",
+	"limitationsPublicAccess": "Defnyddio math o gyfyngiadau",
 	"attributionStatement": "Datganiad Priodoli",
 	"restrictionType": "Math o Gyfyngiad",
 	"otherRestrictions": "Other restrictions",
