add alt attribute to logo based on the language of the site a user navigates to - i.e. english or welsh. Fixes accessibility issues in SUPPORT-20201/NRW bug ref 169594

--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -63,5 +63,6 @@
 	"targetLang": "en",
 	"switchToPortal": "English",
 	"switchToPortalTitle": "Switch to English",
-	"portalURL": "../../srv/eng/catalog.search#/home"
+	"portalURL": "../../srv/eng/catalog.search#/home",
+	"logoName": "Cyfoeth Naturiol Cymru"
 }
