--- a/nrw/geonetwork/catalog/locales/cy-custom.json
+++ b/nrw/geonetwork/catalog/locales/cy-custom.json
@@ -48,7 +48,7 @@
 	"ui-showMosaic": "Show planned outage message on Home page",
 	"plannedOutage": "Byddwch yn ymwybodol na fydd Darganfod Data ar gael o <strong>28/03/2024 (15:00)</strong> at <strong>28/03/2024 (16:00)</strong>. Ymddiheurwn am unrhyw anghyfleustra, os oes gennych unrhyw ymholiadau, cysylltwch ag <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
 	"contactUs": "Cysylltu â Ni",
-	"createMetadataError-duplicateUUID": "There is already an existing record with this resource identifier. Get the next available identifier <a target='_blank' href='http://localhost/geonetwork/srv/eng/catalog.search#/page/get-next-identifier?page=get-next-identifier'>here</a>",
+	"createMetadataError-duplicateUUID": "There is already an existing record with this resource identifier.",
 	"true": "cywir",
 	"false": "anghywir",
 	"featureCatalog": "Catalog nodwedd",
